# veltrion-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  final_summary.html  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  data_generator.py  environment.py  graders.py  requirements.txt
tests/: test_environment.py
